tests/examples/bad/duplicate_method2.lat
int main() {
    return 1;
}

class A {
    int f() {
        return 1;
    }
    void f() {
        return ; 
    }
}